--- a/packages/stream_feed/pubspec.yaml
+++ b/packages/stream_feed/pubspec.yaml
@@ -26,5 +26,12 @@ dev_dependencies:
   json_serializable: ^6.1.5
   mocktail: ^0.3.0
   test: ^1.17.3
+
+dependency_overrides:
+  dio:
+    git:
+      url: https://github.com/cfug/diox
+      path: dio/
+      ref: dio
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
