--- a/packages/stream_feed_flutter/example/pubspec.yaml
+++ b/packages/stream_feed_flutter/example/pubspec.yaml
@@ -50,6 +50,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+dependency_overrides:
+  dio: ^5.0.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
