--- a/packages/stream_feed_flutter/pubspec.yaml
+++ b/packages/stream_feed_flutter/pubspec.yaml
@@ -29,6 +29,7 @@ dependency_overrides:
     git:
       url: https://github.com/bluefireteam/photo_view
       ref: 8156907eecfa812b181a5a729d790f6d399f311b
+  dio: ^5.0.0
 
 dev_dependencies:
   golden_toolkit: ^0.13.0
